Add free sci fi fighter asset

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 <body class="w3-container">
     <div class="w3-panel w3-flat-turquoise">
-       <h2>Under Construction...</h2>
+       <a href="free_sci_fi_fighter.zip" download>Free Sci Fi Fighter</a>
     </div>
 </body>
 </html>
