Removed dependency on external resources

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 <title>Simple Http Service</title>
 
-<body class="w3-container">
-    <div class="w3-panel w3-flat-turquoise">
-       <a href="free_sci_fi_fighter.zip" download>Free Sci Fi Fighter</a>
-    </div>
+<body>
+    <a href="free_sci_fi_fighter.zip" download>Free Sci Fi Fighter</a>
 </body>
 </html>
